we are able to add missing values in file

--- a/python recap/dataana.ipynb
+++ b/python recap/dataana.ipynb
@@ -315,6 +315,48 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15bdaeed",
+   "metadata": {},
+   "source": [
+    "1️⃣2️⃣ Fill missing age values in Titanic dataset with median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "da6d6919",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      22.0\n",
+      "1      38.0\n",
+      "2      26.0\n",
+      "3      35.0\n",
+      "4      35.0\n",
+      "       ... \n",
+      "882    27.0\n",
+      "883    19.0\n",
+      "884     7.0\n",
+      "885    26.0\n",
+      "886    32.0\n",
+      "Name: Age, Length: 887, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"titanic.csv\")\n",
+    "df['Age'] = df['Age'].fillna(df['Age'].median())\n",
+    "\n",
+    "print(df[\"Age\"])\n"
+   ]
   }
  ],
  "metadata": {
