we are able to count fare per person on the

--- a/python recap/dataana.ipynb
+++ b/python recap/dataana.ipynb
@@ -357,6 +357,16 @@
     "\n",
     "print(df[\"Age\"])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7d9b5374",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Fare_per_person'] = df['Fare']/(df['Siblings/Spouses Aboard'] + df['Parents/Children Aboard'] +1)"
+   ]
   }
  ],
  "metadata": {
