--- a/python recap/dataana.ipynb
+++ b/python recap/dataana.ipynb
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d129b873",
    "metadata": {},
    "outputs": [
@@ -872,18 +872,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>870</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Mrs. Samuel (Hannah Wizosky) Abelson</td>\n",
-       "      <td>female</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24.0000</td>\n",
-       "      <td>12.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>871</th>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
@@ -931,9 +919,21 @@
        "      <td>30.0000</td>\n",
        "      <td>30.00000</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>885</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mr. Karl Howell Behr</td>\n",
+       "      <td>male</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>30.00000</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>233 rows × 9 columns</p>\n",
+       "<p>342 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -944,11 +944,11 @@
        "8           1       3   Mrs. Oscar W (Elisabeth Vilhelmina Berg) Johnson   \n",
        "9           1       2                 Mrs. Nicholas (Adele Achem) Nasser   \n",
        "..        ...     ...                                                ...   \n",
-       "870         1       2               Mrs. Samuel (Hannah Wizosky) Abelson   \n",
        "871         1       3                           Miss. Adele Kiamie Najib   \n",
        "875         1       1       Mrs. Thomas Jr (Lily Alexenia Wilson) Potter   \n",
        "876         1       2        Mrs. William (Imanita Parrish Hall) Shelley   \n",
        "883         1       1                        Miss. Margaret Edith Graham   \n",
+       "885         1       1                               Mr. Karl Howell Behr   \n",
        "\n",
        "        Sex   Age  Siblings/Spouses Aboard  Parents/Children Aboard     Fare  \\\n",
        "1    female  38.0                        1                        0  71.2833   \n",
@@ -957,11 +957,11 @@
        "8    female  27.0                        0                        2  11.1333   \n",
        "9    female  14.0                        1                        0  30.0708   \n",
        "..      ...   ...                      ...                      ...      ...   \n",
-       "870  female  28.0                        1                        0  24.0000   \n",
        "871  female  15.0                        0                        0   7.2250   \n",
        "875  female  56.0                        0                        1  83.1583   \n",
        "876  female  25.0                        0                        1  26.0000   \n",
        "883  female  19.0                        0                        0  30.0000   \n",
+       "885    male  26.0                        0                        0  30.0000   \n",
        "\n",
        "     Fare_per_person  \n",
        "1           35.64165  \n",
@@ -970,22 +970,23 @@
        "8            3.71110  \n",
        "9           15.03540  \n",
        "..               ...  \n",
-       "870         12.00000  \n",
        "871          7.22500  \n",
        "875         41.57915  \n",
        "876         13.00000  \n",
        "883         30.00000  \n",
+       "885         30.00000  \n",
        "\n",
-       "[233 rows x 9 columns]"
+       "[342 rows x 9 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df['Sex'] == 'female') & (df['Survived'] ==1)]"
+    "df[(df['Sex'] == 'female') & (df['Survived'] ==1)]\n",
+    "df[(df['Survived'] == 1)]"
    ]
   }
  ],
