we addded some fiole tpo cpmlete rthe process

--- a/python recap/dataana.ipynb
+++ b/python recap/dataana.ipynb
@@ -988,6 +988,91 @@
     "df[(df['Sex'] == 'female') & (df['Survived'] ==1)]\n",
     "df[(df['Survived'] == 1)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9ae0f577",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>female</th>\n",
+       "      <td>27.719745</td>\n",
+       "      <td>44.479818</td>\n",
+       "      <td>0.742038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>30.431361</td>\n",
+       "      <td>25.633935</td>\n",
+       "      <td>0.190227</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Age       Fare  Survived\n",
+       "Sex                                   \n",
+       "female  27.719745  44.479818  0.742038\n",
+       "male    30.431361  25.633935  0.190227"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_group = df.groupby(\"Sex\").agg({\n",
+    "    \"Age\": \"mean\",\n",
+    "    \"Fare\": \"mean\",\n",
+    "    \"Survived\": \"mean\"   # survival rate\n",
+    "})\n",
+    "\n",
+    "df_group\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3f2fc01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
