We are about create

--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -121,7 +121,19 @@
    "id": "eb8200d3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def json_validate(filename):\n",
+    "    try:\n",
+    "        with open(filename,'r',encoding =\"utf-8\") as f:\n",
+    "            data =f.read()\n",
+    "            json.loads(data) \n",
+    "            print(\"valid json file\")\n",
+    "            json.load\n",
+    "    \n",
+    "    except json.JSONDecoderError as e:\n",
+    "        print(\"Invalid json Found\")\n",
+    "        print(f\"Error e\n"
+   ]
   }
  ],
  "metadata": {
