we are stareted to clean up datas lets see

--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -7969,11 +7969,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "81c464ae",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Successfully created 'mobile_data.json' with 50 records.\n",
+      "\n",
+      "Preview:\n",
+      "[\n",
+      "    {\n",
+      "        \"id\": 1,\n",
+      "        \"name\": \"Rahul_0\",\n",
+      "        \"country_code\": \"+44\",\n",
+      "        \"mobile_number\": \"9753975008\",\n",
+      "        \"is_active\": false\n",
+      "    },\n",
+      "    {\n",
+      "        \"id\": 2,\n",
+      "        \"name\": \"David_1\",\n",
+      "        \"country_code\": \"+61\",\n",
+      "        \"mobile_number\": \"7191189116\",\n",
+      "        \"is_active\": false\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import random\n",
+    "\n",
+    "# 1. Setup lists for dummy data\n",
+    "names = [\"Amit\", \"Sarah\", \"John\", \"Priya\", \"Rahul\", \"Emily\", \"David\", \"Sneha\", \"Vikram\", \"Lisa\"]\n",
+    "country_codes = [\"+1\", \"+91\", \"+44\", \"+81\", \"+61\"]\n",
+    "\n",
+    "# 2. Function to generate a random 10-digit mobile number\n",
+    "def generate_mobile():\n",
+    "    # random.randint(start, end)\n",
+    "    # This ensures we get exactly 10 digits (from 6000000000 to 9999999999)\n",
+    "    # Using 6-9 at start is common for mobile numbers in many places\n",
+    "    return str(random.randint(6000000000, 9999999999))\n",
+    "\n",
+    "# 3. Generate 50 records\n",
+    "data_list = []\n",
+    "for i in range(50):\n",
+    "    record = {\n",
+    "        \"id\": i + 1,\n",
+    "        \"name\": random.choice(names) + \"_\" + str(i), # Unique-ish name\n",
+    "        \"country_code\": random.choice(country_codes),\n",
+    "        \"mobile_number\": generate_mobile(),\n",
+    "        \"is_active\": random.choice([True, False])\n",
+    "    }\n",
+    "    data_list.append(record)\n",
+    "\n",
+    "# 4. Save to JSON file\n",
+    "file_name = \"mobile_data.json\"\n",
+    "try:\n",
+    "    with open(file_name, \"w\") as f:\n",
+    "        json.dump(data_list, f, indent=4) # indent=4 makes it readable\n",
+    "    print(f\"✅ Successfully created '{file_name}' with 50 records.\")\n",
+    "    \n",
+    "    # Preview the first 2 records\n",
+    "    print(\"\\nPreview:\")\n",
+    "    print(json.dumps(data_list[:2], indent=4))\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error saving file: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "645d6d0a",
+   "metadata": {},
+   "source": [
+    "creating random file\n",
+    "\n",
+    "import json\n",
+    "import random\n",
+    "\n",
+    "# 1. Setup lists for dummy data\n",
+    "names = [\"Amit\", \"Sarah\", \"John\", \"Priya\", \"Rahul\", \"Emily\", \"David\", \"Sneha\", \"Vikram\", \"Lisa\"]\n",
+    "country_codes = [\"+1\", \"+91\", \"+44\", \"+81\", \"+61\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d94be649",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Preview: \n",
+      "[\n",
+      "    {\n",
+      "        \"id\": 1,\n",
+      "        \"name\": \"Amit_0\",\n",
+      "        \"country_code\": \"+81\",\n",
+      "        \"mobile_number\": \"8313116942\",\n",
+      "        \"is_active\": true\n",
+      "    },\n",
+      "    {\n",
+      "        \"id\": 2,\n",
+      "        \"name\": \"Sneha_1\",\n",
+      "        \"country_code\": \"+61\",\n",
+      "        \"mobile_number\": \"6291759788\",\n",
+      "        \"is_active\": true\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import random\n",
+    "\n",
+    "# 1. Setup lists for dummy data\n",
+    "names = [\"Amit\", \"Sarah\", \"John\", \"Priya\", \"Rahul\", \"Emily\", \"David\", \"Sneha\", \"Vikram\", \"Lisa\"]\n",
+    "country_codes = [\"+1\", \"+91\", \"+44\", \"+81\", \"+61\"]\n",
+    "\n",
+    "# function to generate 10 digit mobile number\n",
+    "def generate_mobile():\n",
+    "    #random.rsdint(start, stop)\n",
+    "    return str(random.randint(6000000000, 9999999999))\n",
+    "\n",
+    "#generate 50 records\n",
+    "data_list = []\n",
+    "for i in range(50):\n",
+    "    record = {\n",
+    "        \"id\": i +1,\n",
+    "        \"name\": random.choice(names) + \"_\" +str(i),\n",
+    "            \"country_code\": random.choice(country_codes),\n",
+    "                \"mobile_number\": generate_mobile(),\n",
+    "                    \"is_active\": random.choice([True,False])\n",
+    "                    }\n",
+    "    data_list.append(record)\n",
+    "#4. Save to json file\n",
+    "file_name = \"mobile_data.json\"\n",
+    "\n",
+    "try:\n",
+    "    with open(file_name, \"w\")as f:\n",
+    "        json.dump(data_list,f, indent = 4) #indent 4 makes it readable \n",
+    "    print(\"\\nPreview: \")\n",
+    "    print(json.dumps(data_list[:2],indent = 4))\n",
+    "except Exception as e:\n",
+    "    print(f\"Error saving file\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9efaf608",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "5️⃣ Clean phone numbers in JSON: remove spaces, +91, dashes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e726d0ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----1. Messy data created ---\n",
+      "[\n",
+      "  {\n",
+      "    \"name\": \"Rahul\",\n",
+      "    \"phone\": \"+91-9876543210\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"name\": \"Sara\",\n",
+      "    \"phone\": \"987 654 3211\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"name\": \"John\",\n",
+      "    \"phone\": \"(+91)9876543212\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"name\": \"Amit\",\n",
+      "    \"phone\": \"987-654-3213\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"name\": \"Priya\",\n",
+      "    \"phone\": \"+91 98765 43214\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"name\": \"Mike\",\n",
+      "    \"phone\": \"9876543215\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"name\": \"Anuj\",\n",
+      "    \"phone\": \"UNKNOWN\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"name\": \"Lisa\",\n",
+      "    \"phone\": \"09876543216\"\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re # regular expressions the best toll tp pattern matching\n",
+    "messy_numbers = [\n",
+    "    {\"name\": \"Rahul\", \"phone\": \"+91-9876543210\"},  # Dash and Code\n",
+    "    {\"name\": \"Sara\",  \"phone\": \"987 654 3211\"},    # Spaces\n",
+    "    {\"name\": \"John\",  \"phone\": \"(+91)9876543212\"}, # Parentheses\n",
+    "    {\"name\": \"Amit\",  \"phone\": \"987-654-3213\"},    # Multiple Dashes\n",
+    "    {\"name\": \"Priya\", \"phone\": \"+91 98765 43214\"}, # Code + Space\n",
+    "    {\"name\": \"Mike\",  \"phone\": \"9876543215\"},      # Already Clean\n",
+    "    {\"name\": \"Anuj\",  \"phone\": \"UNKNOWN\"},         # Garbage data\n",
+    "    {\"name\": \"Lisa\",  \"phone\": \"09876543216\"}      # Leading Zero\n",
+    "]\n",
+    "\n",
+    "print(\"----1. Messy data created ---\")\n",
+    "print(json.dumps(messy_numbers,indent =2 )) #indent\n",
+    "\n",
+    "def clean_numbers(phone_str)\n"
+   ]
   }
  ],
  "metadata": {
