we are able to edit and update

--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -8137,7 +8137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e726d0ad",
    "metadata": {},
    "outputs": [
@@ -8146,44 +8146,49 @@
      "output_type": "stream",
      "text": [
       "----1. Messy data created ---\n",
+      "data cleaned and savded to folder cleaned_num.json\n",
       "[\n",
-      "  {\n",
-      "    \"name\": \"Rahul\",\n",
-      "    \"phone\": \"+91-9876543210\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"name\": \"Sara\",\n",
-      "    \"phone\": \"987 654 3211\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"name\": \"John\",\n",
-      "    \"phone\": \"(+91)9876543212\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"name\": \"Amit\",\n",
-      "    \"phone\": \"987-654-3213\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"name\": \"Priya\",\n",
-      "    \"phone\": \"+91 98765 43214\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"name\": \"Mike\",\n",
-      "    \"phone\": \"9876543215\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"name\": \"Anuj\",\n",
-      "    \"phone\": \"UNKNOWN\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"name\": \"Lisa\",\n",
-      "    \"phone\": \"09876543216\"\n",
-      "  }\n",
+      "    {\n",
+      "        \"name \": \"Rahul\",\n",
+      "        \"original_phone\": \"+91-9876543210\",\n",
+      "        \"clean_phone\": \"9876543210\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name \": \"Sara\",\n",
+      "        \"original_phone\": \"987 654 3211\",\n",
+      "        \"clean_phone\": \"9876543211\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name \": \"John\",\n",
+      "        \"original_phone\": \"(+91)9876543212\",\n",
+      "        \"clean_phone\": \"9876543212\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name \": \"Amit\",\n",
+      "        \"original_phone\": \"987-654-3213\",\n",
+      "        \"clean_phone\": \"9876543213\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name \": \"Priya\",\n",
+      "        \"original_phone\": \"+91 98765 43214\",\n",
+      "        \"clean_phone\": \"9876543214\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name \": \"Mike\",\n",
+      "        \"original_phone\": \"9876543215\",\n",
+      "        \"clean_phone\": \"9876543215\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name \": \"Lisa\",\n",
+      "        \"original_phone\": \"09876543216\",\n",
+      "        \"clean_phone\": \"9876543216\"\n",
+      "    }\n",
       "]\n"
      ]
     }
    ],
    "source": [
+    "import json \n",
     "import re # regular expressions the best toll tp pattern matching\n",
     "messy_numbers = [\n",
     "    {\"name\": \"Rahul\", \"phone\": \"+91-9876543210\"},  # Dash and Code\n",
@@ -8197,9 +8202,79 @@
     "]\n",
     "\n",
     "print(\"----1. Messy data created ---\")\n",
-    "print(json.dumps(messy_numbers,indent =2 )) #indent\n",
+    " #print(json.dumps(messy_numbers,indent =2 )) #indent\n",
     "\n",
-    "def clean_numbers(phone_str)\n"
+    "def clean_numbers(phone_str):\n",
+    "    if not phone_str or not any(char.isdigit() for char in phone_str):\n",
+    "        return None\n",
+    "    #remove specefic prefixes(like +91 or 0 at start)\n",
+    "    #we remove +91 or 0 that start with\n",
+    "    phone_str = phone_str.replace(\"+91\", \"\")\n",
+    "    #3. remove all non numeric characters(spaces, dashes, brackets)\n",
+    "    #\\D means \"anything that is not a digit\"\n",
+    "    clean_num = re.sub(r'\\D','',phone_str)\n",
+    "\n",
+    "    #remove leading zer if present (standardizing to 10 digits)\n",
+    "    if clean_num.startswith('0'):\n",
+    "       clean_num = clean_num[1:]\n",
+    "    return clean_num\n",
+    "cleaned_data = []\n",
+    "\n",
+    "for entry in messy_numbers:\n",
+    "    original = entry[\"phone\"]\n",
+    "    clean  = clean_numbers(original)\n",
+    "\n",
+    "    # only add successfully processed data\n",
+    "    if clean:\n",
+    "        cleaned_data.append({\n",
+    "            \"name \": entry[\"name\"],\n",
+    "            \"original_phone\": original,\n",
+    "            \"clean_phone\" : clean\n",
+    "        })\n",
+    "\n",
+    "# save to json \n",
+    "\n",
+    "output_file = \"cleaned_num.json\"\n",
+    "with open(output_file,'w') as f:\n",
+    "    json.dump(cleaned_data,f,indent = 4)\n",
+    "\n",
+    "print(f\"data cleaned and savded to folder {output_file}\")\n",
+    "print(json.dumps(cleaned_data, indent = 4))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ebc050a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created 'customer_with_dups.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = {\n",
+    "    'CustomerID': [101, 102, 103, 101, 104, 102, 105],\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'Alice', 'David', 'Bob', 'Eve'],\n",
+    "    'Email': ['alice@example.com', 'bob@example.com', 'charlie@example.com', \n",
+    "              'alice@example.com', 'david@example.com', 'bob@example.com', 'eve@example.com'],\n",
+    "    'SignupDate': ['2023-01-01', '2023-01-02', '2023-01-03', '2023-01-01', \n",
+    "                   '2023-01-04', '2023-01-02', '2023-01-05']\n",
+    "}\n",
+    "\n",
+    "# create the file \n",
+    "df_raw = pd.DataFrame(data)\n",
+    "df_raw.to_csv('customer_with_dumps.csv', index = False)\n",
+    "print(\"created 'customer_with_dups.csv\")\n",
+    "# indentify dupplicates \n",
+    "# keep = \n"
    ]
   }
  ],
