able to change the file

--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -8245,8 +8245,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "700c6422",
+   "metadata": {},
+   "source": [
+    "## duplicate rows in a CSV and print them\n",
+    "\n",
+    "(Real-world ETL prblem)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3ebc050a",
    "metadata": {},
    "outputs": [
@@ -8254,7 +8264,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "created 'customer_with_dups.csv\n"
+      "created 'customer_with_dups.csv\n",
+      " found 4   duplicate rows \n",
+      "   CustomerID   Name              Email  SignupDate\n",
+      "0         101  Alice  alice@example.com  2023-01-01\n",
+      "1         102    Bob    bob@example.com  2023-01-02\n",
+      "3         101  Alice  alice@example.com  2023-01-01\n",
+      "5         102    Bob    bob@example.com  2023-01-02\n",
+      "\n",
+      "(duplicates saved to 'audit_duplicates.csv' for review)\n"
      ]
     }
    ],
@@ -8274,7 +8292,62 @@
     "df_raw.to_csv('customer_with_dumps.csv', index = False)\n",
     "print(\"created 'customer_with_dups.csv\")\n",
     "# indentify dupplicates \n",
-    "# keep = \n"
+    "# keep = \n",
+    "#================================\n",
+    "\n",
+    "#2 ETL solution\n",
+    "#==============================\n",
+    "#1. load data\n",
+    "df = pd.read_csv('customer_with_dumps.csv')\n",
+    "\n",
+    "#2. identify  duplicates \n",
+    "# keep='first'  -> Marks the 2nd/3rd instance as True (standard)\n",
+    "# keep=False    -> Marks ALL instances as True (useful to see the groups)\n",
+    "\n",
+    "duplicate_rows = df[df.duplicated(keep = False)]\n",
+    "\n",
+    "#3. Print the results \n",
+    "if not duplicate_rows.empty:\n",
+    "    print(f\" found {len(duplicate_rows)}   duplicate rows \")\n",
+    "    print(duplicate_rows)\n",
+    "#optional save in diffrent folder for audit \n",
+    "    duplicate_rows.to_csv(\"audit_duplicates.csv\", index = False)\n",
+    "    print(\"\\n(duplicates saved to 'audit_duplicates.csv' for review)\")\n",
+    "else:\n",
+    "    print('\\n no duplicates found in csv file')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de66969b",
+   "metadata": {},
+   "source": [
+    "now we confirmed the  file to delete to all duplicates "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a8d3422f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   CustomerID     Name                Email  SignupDate\n",
+      "0         101    Alice    alice@example.com  2023-01-01\n",
+      "1         102      Bob      bob@example.com  2023-01-02\n",
+      "2         103  Charlie  charlie@example.com  2023-01-03\n",
+      "4         104    David    david@example.com  2023-01-04\n",
+      "6         105      Eve      eve@example.com  2023-01-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_clean = df.drop_duplicates(keep = 'first')\n",
+    "print(df_clean)\n",
+    "df_clean.to_csv(\" cleaned.csv\", index =False)"
    ]
   }
  ],
