--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "baa75be3",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mInvalidPathException\u001b[39m                      Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m json_data = generate_json(file_size=\u001b[32m50000\u001b[39m)\n\u001b[32m      3\u001b[39m json_data = generate_json(file_size=\u001b[32m50000\u001b[39m, column_description={\u001b[33m\"\u001b[39m\u001b[33mContact\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mint\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mName\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mstr\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mStatus\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mboolean\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mCreated_Time\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mdatetime\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mAmount\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mfloat\u001b[39m\u001b[33m\"\u001b[39m})\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m json_data = \u001b[43mgenerate_json\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfile_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m50000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43msave_file_path\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mbugshere\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mPRACTICE\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mpython recap\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43m2nd practiseset\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mhello.json\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m json_data = generate_json(file_size=\u001b[32m50000\u001b[39m)\n\u001b[32m      3\u001b[39m json_data = generate_json(file_size=\u001b[32m50000\u001b[39m, column_description={\u001b[33m\"\u001b[39m\u001b[33mContact\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mint\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mName\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mstr\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mStatus\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mboolean\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mCreated_Time\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mdatetime\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mAmount\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mfloat\u001b[39m\u001b[33m\"\u001b[39m})\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m json_data = \u001b[43mgenerate_json\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfile_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m50000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43msave_file_path\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mbugshere\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mPRACTICE\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mpython recap\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43m2nd practiseset\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mhello.json\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\generate_dummyf\\generate.py:18\u001b[39m, in \u001b[36mgenerate_json\u001b[39m\u001b[34m(file_size, column_description, save_file_path)\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mgenerate_json\u001b[39m(file_size : \u001b[38;5;28mint\u001b[39m, column_description : \u001b[38;5;28mdict\u001b[39m = {\u001b[33m\"\u001b[39m\u001b[33mS.No\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mint\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mProduct_Name\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mstr\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mProduct_Status\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mboolean\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mDelivery_Date\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mdatetime\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mRate\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mfloat\u001b[39m\u001b[33m\"\u001b[39m}, save_file_path : \u001b[38;5;28mstr\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m     17\u001b[39m     json_obj = JsonGenerator(file_size=file_size, column_description=column_description, save_file_path = save_file_path)\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m     \u001b[43mjson_obj\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\generate_dummyf\\json_generator.py:27\u001b[39m, in \u001b[36mJsonGenerator.main\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     25\u001b[39m obj.validate_args()\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.arguments[\u001b[33m\"\u001b[39m\u001b[33msave_file_path\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m     \u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_file_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     28\u001b[39m     \u001b[38;5;28mself\u001b[39m.new_file_path = get_path_to_create_new_file(\u001b[33m\"\u001b[39m\u001b[33mjson\u001b[39m\u001b[33m\"\u001b[39m, user_input_path = \u001b[38;5;28mself\u001b[39m.arguments[\u001b[33m\"\u001b[39m\u001b[33msave_file_path\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m     29\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\generate_dummyf\\validator.py:17\u001b[39m, in \u001b[36mValidation.validate_file_path\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mvalidate_file_path\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m     16\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.exists(\u001b[38;5;28mself\u001b[39m.arguments[\u001b[33m\"\u001b[39m\u001b[33msave_file_path\u001b[39m\u001b[33m\"\u001b[39m]): \n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m InvalidPathException(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProvided file path \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.arguments[\u001b[33m'\u001b[39m\u001b[33msave_file_path\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m for saving output file does not exist\u001b[39m\u001b[33m\"\u001b[39m)\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a5fdb0f9",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "aea30e69",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cb3a65ee",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "eb8200d3",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "02497ce6",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "0039b381",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "363f3de7",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "1a675a23",
    "metadata": {},
    "outputs": [
@@ -3988,7 +3988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "84d35c59",
    "metadata": {},
    "outputs": [
@@ -7856,7 +7856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "b0672aa4",
    "metadata": {},
    "outputs": [
@@ -7891,7 +7891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "882c5f43",
    "metadata": {},
    "outputs": [
@@ -7929,7 +7929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "754a100c",
    "metadata": {},
    "outputs": [
@@ -7969,7 +7969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "81c464ae",
    "metadata": {},
    "outputs": [
@@ -8058,7 +8058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d94be649",
    "metadata": {},
    "outputs": [
@@ -8137,7 +8137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e726d0ad",
    "metadata": {},
    "outputs": [
@@ -8256,7 +8256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3ebc050a",
    "metadata": {},
    "outputs": [
@@ -8327,7 +8327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a8d3422f",
    "metadata": {},
    "outputs": [
@@ -8348,6 +8348,100 @@
     "df_clean = df.drop_duplicates(keep = 'first')\n",
     "print(df_clean)\n",
     "df_clean.to_csv(\" cleaned.csv\", index =False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abcd8e49",
+   "metadata": {},
+   "source": [
+    "## Handling Missing Data (Null Values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "319ed7c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " --- Messy original dirty data ---\n",
+      "      Name   Age   Salary Department\n",
+      "0    Alice  25.0  50000.0         HR\n",
+      "1      Bob   NaN  54000.0         IT\n",
+      "2  Charlie  30.0      NaN         IT\n",
+      "3      NaN  29.0  58000.0  Marketing\n",
+      "4      Eve  22.0  46000.0        NaN\n",
+      "5    Frank   NaN  52000.0         HR\n",
+      "6    Grace  35.0  60000.0         IT\n",
+      "---Missing data ------\n",
+      "<bound method DataFrame.sum of     Name    Age  Salary  Department\n",
+      "0  False  False   False       False\n",
+      "1  False   True   False       False\n",
+      "2  False  False    True       False\n",
+      "3   True  False   False       False\n",
+      "4  False  False   False        True\n",
+      "5  False   True   False       False\n",
+      "6  False  False   False       False>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_7060\\3884230996.py:36: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean['Age'] = df_clean['Age'].fillna(average_age)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# ==========================================\n",
+    "# STEP 1: Generate Data with Missing Values\n",
+    "# ==========================================\n",
+    "data = {\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', np.nan, 'Eve', 'Frank', 'Grace'], # np.nan is a \"Not a Number\" (Null)\n",
+    "    'Age': [25, np.nan, 30, 29, 22, np.nan, 35],\n",
+    "    'Salary': [50000, 54000, np.nan, 58000, 46000, 52000, 60000],\n",
+    "    'Department': ['HR', 'IT', 'IT', 'Marketing', np.nan, 'HR', 'IT']}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\" --- Messy original dirty data ---\")\n",
+    "print(df)\n",
+    "\n",
+    "#-----------------------------\n",
+    "# lets detect missing  data\n",
+    "#-----------------------------\n",
+    "\n",
+    "print(\"---Missing data ------\")\n",
+    "#isnull() checks every cell.sum() counts the trues per column\n",
+    "print(df.isnull().sum)\n",
+    "\n",
+    "#=======================================\n",
+    "# step3: data scientist strategy\n",
+    "#========================================\n",
+    "\n",
+    "# strategy 1. Critical data is missing ? --drop\n",
+    "# if we dont know the 'name' we cannt guess the name right\n",
+    "df_clean = df.dropna(subset = ['Name'])\n",
+    "\n",
+    "#STRATEGY   2. Numeric data missing ? - impute \n",
+    "## we can guess age by taking average (mean) of everyone else \n",
+    "average_age = df_clean['Age'].mean()\n",
+    "df_clean['Age'] = df_clean['Age'].fillna(average_age)\n",
+    "\n",
+    "# we can guess salary by doing median of salary value \n",
+    "# median is safer than mean because for money rich outliers dont skew it \n",
+    "\n"
    ]
   }
  ],
