--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -8360,7 +8360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "319ed7c4",
    "metadata": {},
    "outputs": [
@@ -8385,19 +8385,41 @@
       "3   True  False   False       False\n",
       "4  False  False   False        True\n",
       "5  False   True   False       False\n",
-      "6  False  False   False       False>\n"
+      "6  False  False   False       False>\n",
+      " ------cleaned data-----\n",
+      "      Name   Age         Salary Department\n",
+      "0    Alice  25.0        50000.0         HR\n",
+      "1      Bob  28.0        54000.0         IT\n",
+      "2  Charlie  30.0  median_salary         IT\n",
+      "4      Eve  22.0        46000.0    Unknown\n",
+      "5    Frank  28.0        52000.0         HR\n",
+      "6    Grace  35.0        60000.0         IT\n",
+      "\n",
+      " Saved to 'employees_clean.csv' \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_7060\\3884230996.py:36: SettingWithCopyWarning: \n",
+      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_7060\\2437838007.py:36: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_clean['Age'] = df_clean['Age'].fillna(average_age)\n"
+      "  df_clean['Age'] = df_clean['Age'].fillna(average_age)\n",
+      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_7060\\2437838007.py:41: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean['Salary'] = df_clean['Salary'].fillna('median_salary')\n",
+      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_7060\\2437838007.py:45: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean['Department'] = df_clean['Department'].fillna('Unknown')\n"
      ]
     }
    ],
@@ -8440,7 +8462,117 @@
     "df_clean['Age'] = df_clean['Age'].fillna(average_age)\n",
     "\n",
     "# we can guess salary by doing median of salary value \n",
-    "# median is safer than mean because for money rich outliers dont skew it \n",
+    "# median is safer than mean because for money rich outliers dont skew it\n",
+    "median_salary = df_clean['Salary'].median()\n",
+    "df_clean['Salary'] = df_clean['Salary'].fillna('median_salary')\n",
+    "\n",
+    "\n",
+    "#strategy 3. Categorial Data missing ? fill with unknown \n",
+    "df_clean['Department'] = df_clean['Department'].fillna('Unknown')\n",
+    "\n",
+    "##===================\n",
+    "# save clean data\n",
+    "print(\" ------cleaned data-----\")\n",
+    "print(df_clean)\n",
+    "\n",
+    "#-- Saving Data---------\n",
+    "#==========================\n",
+    "df_clean.to_csv('employee_clean.csv', index = False)\n",
+    "print(\"\\n Saved to 'employees_clean.csv' \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95dacabf",
+   "metadata": {},
+   "source": [
+    "Here is Challenge 8: Aggregation (Grouping Data).\n",
+    "\n",
+    "Here is Challenge 8: Aggregation (Grouping Data).\n",
+    "\n",
+    "This is the most common task for a Data Analyst. Your boss will never ask \"Show me the list of all 50,000 employees.\" They will ask \"Which department costs us the most money?\" or \"What is the average salary in IT?\"\n",
+    "\n",
+    "To answer this, we use the Split-Apply-Combine strategy (Grouping)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "db4201b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----Raw--------\n",
+      "  Department Employee  Salary  Years_Exp\n",
+      "0         IT    Alice   60000          2\n",
+      "1         HR      Bob   45000          5\n",
+      "2         IT  Charlie   70000          8\n",
+      "3      Sales    David   55000          3\n",
+      "4      Sales      Eve   58000          4\n",
+      "5         IT    Frank   62000          2\n",
+      "6         HR    Grace   47000          6\n",
+      "7      Sales     Hank   80000         10\n",
+      "\n",
+      " ----average Salary per department ----\n",
+      "Department\n",
+      "HR       46000.000000\n",
+      "IT       64000.000000\n",
+      "Sales    64333.333333\n",
+      "Name: Salary, dtype: float64\n",
+      " \n",
+      " B. How many members are in every department\n",
+      "                  Salary               Years_Exp\n",
+      "                    mean    max    min      mean\n",
+      "Department                                      \n",
+      "HR          46000.000000  47000  45000  5.500000\n",
+      "IT          64000.000000  70000  60000  4.000000\n",
+      "Sales       64333.333333  80000  55000  5.666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# ==========================================\n",
+    "# STEP 1: Create Dummy Data (with Groups)\n",
+    "# ==========================================\n",
+    "data = {\n",
+    "    'Department': ['IT', 'HR', 'IT', 'Sales', 'Sales', 'IT', 'HR', 'Sales'],\n",
+    "    'Employee':   ['Alice', 'Bob', 'Charlie', 'David', 'Eve', 'Frank', 'Grace', 'Hank'],\n",
+    "    'Salary':     [60000, 45000, 70000, 55000, 58000, 62000, 47000, 80000],\n",
+    "    'Years_Exp':  [2, 5, 8, 3, 4, 2, 6, 10]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\"-----Raw--------\")\n",
+    "print(df)\n",
+    "\n",
+    "#-----------------\n",
+    "# Group by magic\n",
+    "\n",
+    "#-----------------\n",
+    "\n",
+    "print(\"\\n ----average Salary per department ----\")\n",
+    "\n",
+    "#1.split bu depart ment \n",
+    "#2. select the salary column\n",
+    "#3. apply the 'mean' average function\n",
+    "avg_salary = df.groupby('Department')['Salary'].mean()\n",
+    "print(avg_salary)\n",
+    "\n",
+    "print(\" \\n B. How many members are in every department\")\n",
+    "\n",
+    "# we can do multiple things at once  using .agg()\n",
+    "summary = df.groupby('Department').agg({\n",
+    "    'Salary':['mean', 'max', 'min'], # get average , max , min salary \n",
+    "    'Years_Exp' : 'mean'  #get average  experience\n",
+    "})\n",
+    "\n",
+    "print(summary)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
