we used the and filter

--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -8575,6 +8575,39 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a222720c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "eb7fd91e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---high pw=aid it staff-----\n",
+      "  Department Employee  Salary  Years_Exp\n",
+      "0         IT    Alice   60000          2\n",
+      "2         IT  Charlie   70000          8\n",
+      "5         IT    Frank   62000          2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scenario : \"show me It employee who earn more than 70k\"\n",
+    "# logic(dept == IT and Salary > 10)\n",
+    "\n",
+    "high_paid_it = df[(df['Department'] == 'IT') & (df['Salary'] > 7000)]\n",
+    "print('---high pw=aid it staff-----')\n",
+    "print(high_paid_it)\n"
+   ]
   }
  ],
  "metadata": {
