we have added file

--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -8584,7 +8584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "eb7fd91e",
    "metadata": {},
    "outputs": [
@@ -8592,17 +8592,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--- All Employees ---\n",
+      "      Name Department  Salary  Performance_Score\n",
+      "0    Alice         IT   60000                  3\n",
+      "1      Bob         HR   45000                  4\n",
+      "2  Charlie         IT   75000                  5\n",
+      "3    David      Sales   55000                  3\n",
+      "4      Eve         IT   82000                  5\n",
+      "5    Frank      Sales   48000                  2\n",
       "---high pw=aid it staff-----\n",
-      "  Department Employee  Salary  Years_Exp\n",
-      "0         IT    Alice   60000          2\n",
-      "2         IT  Charlie   70000          8\n",
-      "5         IT    Frank   62000          2\n"
+      "      Name Department  Salary  Performance_Score\n",
+      "0    Alice         IT   60000                  3\n",
+      "2  Charlie         IT   75000                  5\n",
+      "4      Eve         IT   82000                  5\n"
      ]
     }
    ],
    "source": [
     "# scenario : \"show me It employee who earn more than 70k\"\n",
     "# logic(dept == IT and Salary > 10)\n",
+    "data = {\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve', 'Frank'],\n",
+    "    'Department': ['IT', 'HR', 'IT', 'Sales', 'IT', 'Sales'],\n",
+    "    'Salary': [60000, 45000, 75000, 55000, 82000, 48000],\n",
+    "    'Performance_Score': [3, 4, 5, 3, 5, 2] # Scale of 1 to 5\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\"--- All Employees ---\")\n",
+    "print(df)\n",
     "\n",
     "high_paid_it = df[(df['Department'] == 'IT') & (df['Salary'] > 7000)]\n",
     "print('---high pw=aid it staff-----')\n",
