we are able to do or and not findonh with data

--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "baa75be3",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mInvalidPathException\u001b[39m                      Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m json_data = generate_json(file_size=\u001b[32m50000\u001b[39m)\n\u001b[32m      3\u001b[39m json_data = generate_json(file_size=\u001b[32m50000\u001b[39m, column_description={\u001b[33m\"\u001b[39m\u001b[33mContact\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mint\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mName\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mstr\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mStatus\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mboolean\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mCreated_Time\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mdatetime\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mAmount\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mfloat\u001b[39m\u001b[33m\"\u001b[39m})\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m json_data = \u001b[43mgenerate_json\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfile_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m50000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43msave_file_path\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mbugshere\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mPRACTICE\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mpython recap\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43m2nd practiseset\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mhello.json\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m json_data = generate_json(file_size=\u001b[32m50000\u001b[39m)\n\u001b[32m      3\u001b[39m json_data = generate_json(file_size=\u001b[32m50000\u001b[39m, column_description={\u001b[33m\"\u001b[39m\u001b[33mContact\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mint\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mName\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mstr\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mStatus\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mboolean\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mCreated_Time\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mdatetime\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mAmount\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mfloat\u001b[39m\u001b[33m\"\u001b[39m})\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m json_data = \u001b[43mgenerate_json\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfile_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m50000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43msave_file_path\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mbugshere\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mPRACTICE\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mpython recap\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43m2nd practiseset\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[33;43mhello.json\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\generate_dummyf\\generate.py:18\u001b[39m, in \u001b[36mgenerate_json\u001b[39m\u001b[34m(file_size, column_description, save_file_path)\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mgenerate_json\u001b[39m(file_size : \u001b[38;5;28mint\u001b[39m, column_description : \u001b[38;5;28mdict\u001b[39m = {\u001b[33m\"\u001b[39m\u001b[33mS.No\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mint\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mProduct_Name\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mstr\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mProduct_Status\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mboolean\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mDelivery_Date\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mdatetime\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mRate\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mfloat\u001b[39m\u001b[33m\"\u001b[39m}, save_file_path : \u001b[38;5;28mstr\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m     17\u001b[39m     json_obj = JsonGenerator(file_size=file_size, column_description=column_description, save_file_path = save_file_path)\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m     \u001b[43mjson_obj\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\generate_dummyf\\json_generator.py:27\u001b[39m, in \u001b[36mJsonGenerator.main\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     25\u001b[39m obj.validate_args()\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.arguments[\u001b[33m\"\u001b[39m\u001b[33msave_file_path\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m     \u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_file_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     28\u001b[39m     \u001b[38;5;28mself\u001b[39m.new_file_path = get_path_to_create_new_file(\u001b[33m\"\u001b[39m\u001b[33mjson\u001b[39m\u001b[33m\"\u001b[39m, user_input_path = \u001b[38;5;28mself\u001b[39m.arguments[\u001b[33m\"\u001b[39m\u001b[33msave_file_path\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m     29\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\generate_dummyf\\validator.py:17\u001b[39m, in \u001b[36mValidation.validate_file_path\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mvalidate_file_path\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m     16\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.exists(\u001b[38;5;28mself\u001b[39m.arguments[\u001b[33m\"\u001b[39m\u001b[33msave_file_path\u001b[39m\u001b[33m\"\u001b[39m]): \n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m InvalidPathException(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProvided file path \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.arguments[\u001b[33m'\u001b[39m\u001b[33msave_file_path\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m for saving output file does not exist\u001b[39m\u001b[33m\"\u001b[39m)\n",
@@ -8360,7 +8360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "319ed7c4",
    "metadata": {},
    "outputs": [
@@ -8497,7 +8497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "db4201b4",
    "metadata": {},
    "outputs": [
@@ -8584,7 +8584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "eb7fd91e",
    "metadata": {},
    "outputs": [
@@ -8600,11 +8600,22 @@
       "3    David      Sales   55000                  3\n",
       "4      Eve         IT   82000                  5\n",
       "5    Frank      Sales   48000                  2\n",
-      "---high pw=aid it staff-----\n",
+      "---high paid it staff-----\n",
       "      Name Department  Salary  Performance_Score\n",
       "0    Alice         IT   60000                  3\n",
       "2  Charlie         IT   75000                  5\n",
-      "4      Eve         IT   82000                  5\n"
+      "4      Eve         IT   82000                  5\n",
+      "-----Sales or low performance----\n",
+      "    Name Department  Salary  Performance_Score\n",
+      "5  Frank      Sales   48000                  2\n",
+      "\n",
+      " ----- everyone except HR\n",
+      "      Name Department  Salary  Performance_Score\n",
+      "0    Alice         IT   60000                  3\n",
+      "2  Charlie         IT   75000                  5\n",
+      "3    David      Sales   55000                  3\n",
+      "4      Eve         IT   82000                  5\n",
+      "5    Frank      Sales   48000                  2\n"
      ]
     }
    ],
@@ -8621,10 +8632,34 @@
     "df = pd.DataFrame(data)\n",
     "print(\"--- All Employees ---\")\n",
     "print(df)\n",
+    "# Scenario who earn more than 70k in it \n",
+    "# logic (dept == IT) and (Salary > 7000)\n",
     "\n",
     "high_paid_it = df[(df['Department'] == 'IT') & (df['Salary'] > 7000)]\n",
-    "print('---high pw=aid it staff-----')\n",
-    "print(high_paid_it)\n"
+    "print('---high paid it staff-----')\n",
+    "print(high_paid_it)\n",
+    "\n",
+    "#=========================\n",
+    "# step 3 or filter \n",
+    "#=========================\n",
+    "\n",
+    "#scenario : show me anyone who have less performance in sales.\n",
+    "## logic : (Dept== Sales) or (score < 3)\n",
+    "\n",
+    "sales_or_low_performance = df[(df['Department'] == 'Sales') & (df['Performance_Score'] <3)]\n",
+    "\n",
+    "print(\"-----Sales or low performance----\")\n",
+    "print(sales_or_low_performance)\n",
+    "\n",
+    "#======================\n",
+    "#   not filter (~)\n",
+    "# Scenario : \"show everyone except hr\"\n",
+    "\n",
+    "\n",
+    "not_hr = df[~(df['Department'] == 'HR')]\n",
+    "print(\"\\n ----- everyone except HR\")\n",
+    "print(not_hr)\n",
+    "\n"
    ]
   }
  ],
