we are able to add some medical data to practise

--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -8661,6 +8661,54 @@
     "print(not_hr)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36fa8698",
+   "metadata": {},
+   "source": [
+    "Sorting and Ranking Data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8bb90982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ----patient list---------\n",
+      "  Patient_ID   Name  Age      Diagnosis  Risk_Score  Cholesterol\n",
+      "0       P001   John   45   Hypertension         7.5          240\n",
+      "1       P002  Sarah   60       Diabetes         8.2          210\n",
+      "2       P003   Mike   35        Healthy         1.2          180\n",
+      "3       P004   Emma   72  Heart Disease         9.8          290\n",
+      "4       P005  David   50       Diabetes         8.5          230\n",
+      "5       P006  Linda   29        Healthy         2.0          160\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# ==========================================\n",
+    "# STEP 1: Create Medical Data\n",
+    "# ==========================================\n",
+    "data = {\n",
+    "    'Patient_ID': ['P001', 'P002', 'P003', 'P004', 'P005', 'P006'],\n",
+    "    'Name': ['John', 'Sarah', 'Mike', 'Emma', 'David', 'Linda'],\n",
+    "    'Age': [45, 60, 35, 72, 50, 29],\n",
+    "    'Diagnosis': ['Hypertension', 'Diabetes', 'Healthy', 'Heart Disease', 'Diabetes', 'Healthy'],\n",
+    "    'Risk_Score': [7.5, 8.2, 1.2, 9.8, 8.5, 2.0], # Scale 1-10 (10 is critical)\n",
+    "    'Cholesterol': [240, 210, 180, 290, 230, 160]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\" ----patient list---------\")\n",
+    "print(df)"
+   ]
   }
  ],
  "metadata": {
