--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -8672,7 +8672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8bb90982",
    "metadata": {},
    "outputs": [
@@ -8687,7 +8687,16 @@
       "2       P003   Mike   35        Healthy         1.2          180\n",
       "3       P004   Emma   72  Heart Disease         9.8          290\n",
       "4       P005  David   50       Diabetes         8.5          230\n",
-      "5       P006  Linda   29        Healthy         2.0          160\n"
+      "5       P006  Linda   29        Healthy         2.0          160\n",
+      "\n",
+      " Triage List critical patient first\n",
+      "  Patient_ID   Name  Age      Diagnosis  Risk_Score  Cholesterol\n",
+      "3       P004   Emma   72  Heart Disease         9.8          290\n",
+      "4       P005  David   50       Diabetes         8.5          230\n",
+      "1       P002  Sarah   60       Diabetes         8.2          210\n",
+      "0       P001   John   45   Hypertension         7.5          240\n",
+      "5       P006  Linda   29        Healthy         2.0          160\n",
+      "2       P003   Mike   35        Healthy         1.2          180\n"
      ]
     }
    ],
@@ -8707,7 +8716,16 @@
     "}\n",
     "df = pd.DataFrame(data)\n",
     "print(\" ----patient list---------\")\n",
-    "print(df)"
+    "print(df)\n",
+    "\n",
+    "##=======================\n",
+    "# who needs helps first\n",
+    "#========================-------------------------------------------------------------\n",
+    "\n",
+    "## doctor wants to see the sickest patient on the top \n",
+    "critical_patients = df.sort_values(by = 'Risk_Score', ascending = False)\n",
+    "print(\"\\n Triage List critical patient first\")\n",
+    "print(critical_patients)\n"
    ]
   }
  ],
